apply plugin: 'com.android.application'

android {
    compileSdkVersion 33
    buildToolsVersion '33.0.1'

    defaultConfig {
        applicationId "org.maupu.android.tmh"
        minSdkVersion 21
        targetSdkVersion 33
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    packagingOptions {
        exclude 'META-INF/ASL2.0'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/NOTICE'
    }
    buildFeatures {
        viewBinding true
    }
}

dependencies {
    def legacy_support_version = "1.0.0"
    def viewpager_version = "1.0.0"
    def colorful_version = "2.3.4"
    def materialdrawer_version = "6.1.3"
    def appcompat_version = "1.5.1"
    def recyclerview_version = "1.2.1"
    def annotation_version = "1.5.0"
    def material_version = "1.7.0"
    def constraintlayout_version = "2.1.4"
    def gson_version = "2.10"
    def okhttp_version = "4.10.0"
    def materialedittext_version = "2.1.4"
    def materialspinner_version = "1.1.1"
    def slidinguppanel_version = "3.4.0"
    def jackson_version = "1.8.5"
    def mpandroidchart_version = "v2.1.6"
    def flowlayout_version = "1.10"
    def preference_version = "1.2.0"
    def nav_version = "2.5.3"
    def fragment_version = "1.5.4"

    repositories {
        mavenCentral()
        maven { url "https://jitpack.io" }
    }

//    implementation 'com.android.support:appcompat-v7:28.0.0'
//    implementation 'com.android.support:design:28.0.0'

    implementation "androidx.legacy:legacy-support-v4:$legacy_support_version"
    implementation "androidx.viewpager:viewpager:$viewpager_version"
    implementation("androidx.preference:preference:$preference_version") {
        exclude group: 'androidx.lifecycle', module: 'lifecycle-viewmodel-ktx'
    }

    implementation "androidx.fragment:fragment:$fragment_version"

    implementation "androidx.navigation:navigation-fragment:$nav_version"
    implementation "androidx.navigation:navigation-ui:$nav_version"

    implementation "com.github.garretyoder:Colorful:$colorful_version"

    //implementation "com.mikepenz:iconics-core:5.4.0@aar"
    //implementation "com.mikepenz:community-material-typeface:7.0.96.0-kotlin@aar"

    // mikepenz.materialdrawer deps
    implementation "com.mikepenz:materialdrawer:$materialdrawer_version"

    //required support lib modules
    implementation "androidx.appcompat:appcompat:$appcompat_version"
    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
    implementation "androidx.annotation:annotation:$annotation_version"
    implementation "com.google.android.material:material:$material_version"
    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"

    implementation "com.google.code.gson:gson:$gson_version"

    //
    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"

    // https://github.com/rengwuxian/MaterialEditText/
    implementation "com.rengwuxian.materialedittext:library:$materialedittext_version"

    // https://github.com/ganfra/MaterialSpinner
    implementation("com.github.ganfra:material-spinner:$materialspinner_version") {
        exclude group: 'com.nineoldandroids', module: 'library'
        exclude group: 'com.android.support', module: 'appcompat-v7'
    }

    // https://github.com/umano/AndroidSlidingUpPanel
    implementation "com.sothree.slidinguppanel:library:$slidinguppanel_version"

    // Json parsing
    implementation files("libs/jackson-core-asl-${jackson_version}.jar")
    implementation files("libs/jackson-mapper-asl-${jackson_version}.jar")

    // https://github.com/PhilJay/MPAndroidChart
    implementation "com.github.PhilJay:MPAndroidChart:$mpandroidchart_version"

    // https://github.com/ApmeM/android-flowlayout
    implementation "org.apmem.tools:layouts:$flowlayout_version"
}
